--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@
     -moz-transform-style: preserve-3d;
     transform-style: preserve-3d;
 }
+.mask{
+    background-color: rgba(0,0,0,0.6);
+    height: 100vh;
+}
 .prestation{
     height: 400px !important;
     margin: 0 auto !important; /* Added */
@@ -21,4 +25,17 @@
 .team{
     margin: 0 auto !important; /* Added */
     float: none !important; /* Added */
+}
+.carousel-item:after {
+    content:"";
+    display:block;
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background:rgba(0,0,0,0.4);
+}
+.carousel-caption{
+    z-index: 2 !important;
 }
